main: swagger 전면 수정 및 검증 라이브러리 적용
