# api/routes/v1/post.route.ts
@@ -6,13 +6,19 @@ import {
   updatePost,
   deletePost,
 } from "../../controllers/post.controller";
+import {
+  createPostValidator,
+  updatePostValidator,
+  getPostValidator,
+  deletePostValidator,
+} from "../../validators/post.validator";
 
 const router = express.Router();
 
 router.get("/post/query", getAllPosts);
-router.get("/post/query/detail", getPost);
-router.post("/post/command", createPost);
-router.put("/post/command", updatePost);
-router.delete("/post/command", deletePost);
+router.get("/post/query/:seq", getPostValidator, getPost);
+router.post("/post/command", createPostValidator, createPost);
+router.put("/post/command", updatePostValidator, updatePost);
+router.delete("/post/command", deletePostValidator, deletePost);
 
 export default router;
